# cuphead

./: Boss.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Creatures.cpp  Creatures.h  Hero.cpp  Hero.h  MainWindow.cpp  MainWindow.h  Model.cpp  Model.h  MovingObject.cpp  MovingObject.h  Presenter.cpp  Presenter.h  README.md  resources.qrc
includes/: Animation.h  GameWindows.h  MainWindow.h  Model.h  Presenter.h
includes/Graphics/: Animation.h  GameWindows.h
includes/MovingObjects/: Bullet.h  MovingObject.h
includes/MovingObjects/Creatures/: Boss.h  Enemies.h  Hero.h
sources/: Animation.cpp  GameWindows.cpp  MainWindow.cpp  Model.cpp  Presenter.cpp  main.cpp
sources/Graphics/: Animation.cpp  GameWindows.cpp
sources/MovingObjects/: Bullet.cpp  MovingObject.cpp
sources/MovingObjects/Creatures/: Boss.cpp  Enemies.cpp  Hero.cpp
